WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170085
Web Inspector: Saving files should not suggest the top level directory
https://bugs.webkit.org/show_bug.cgi?id=170085
Summary
Web Inspector: Saving files should not suggest the top level directory
Joseph Pecoraro
Reported
2017-03-24 16:36:27 PDT
Summary: Saving files should not suggest the top level directory Steps to Reproduce: 1. Inspect this page 2. Click the Download button in the toolbar => Save Dialog suggests the top level directory (/) which is unhelpful Notes: • Normal behavior when we have no good suggestion is to provide the last directory used by a save dialog in the application. - This can be done by not setting the Save Panel's panel.directoryURL
Attachments
[PATCH] Proposed Fix
(4.46 KB, patch)
2017-03-24 16:38 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2017-03-24 16:36:45 PDT
<
rdar://problem/30197794
>
Joseph Pecoraro
Comment 2
2017-03-24 16:38:13 PDT
Created
attachment 305339
[details]
[PATCH] Proposed Fix
Matt Baker
Comment 3
2017-03-27 16:07:34 PDT
Comment on
attachment 305339
[details]
[PATCH] Proposed Fix r=me
WebKit Commit Bot
Comment 4
2017-03-27 16:37:43 PDT
Comment on
attachment 305339
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 305339 Committed
r214442
: <
http://trac.webkit.org/changeset/214442
>
WebKit Commit Bot
Comment 5
2017-03-27 16:37:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug