Web Inspector: Saving files should not suggest the top level directory https://bugs.webkit.org/show_bug.cgi?id=170085 <rdar://problem/30197794>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-03-27
Reviewed by Matt Baker.

Source/WebKit/mac:

* WebCoreSupport/WebInspectorClient.mm:
(WebInspectorFrontendClient::save):
Don't set panel.directoryURL unless we have a good suggestion.

Source/WebKit2:

* UIProcess/mac/RemoteWebInspectorProxyMac.mm:
(WebKit::RemoteWebInspectorProxy::platformSave):
* UIProcess/mac/WebInspectorProxyMac.mm:
(WebKit::WebInspectorProxy::platformSave):
Don't set panel.directoryURL unless we have a good suggestion.

Canonical link: https://commits.webkit.org/187067@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214442 268f45cc-cd09-0410-ab3c-d52691b4dbfc